--- a/media/js/main.css
+++ b/media/js/main.css
@@ -8,7 +8,7 @@
 *{margin:0;padding:0}
 body{
     font-size:12px;font-family:Arial,Tahoma,"宋体";color:#000;margin:10px 0;
-    background:#EDF0F4 url(/static/images/back.jpeg);
+    /*background:#EDF0F4 url(/static/images/logo.jpeg);*/
     repeat-x;text-align:center}
 br{line-height:10px}
 ul,li{list-style:none}
@@ -31,7 +31,8 @@ a:hover,a:active{text-decoration:underline}
 #wrap{width:97.5%;min-width:960px;margin:0 auto;text-align:left}
 
 /* 头部 */
-#logo{width:222px;height:166px;background:url(/static/images/logo.jpeg) no-repeat;float:left;display:block}
+#logo{width:100px;height:40px;background:url(/static/images/logo.jpeg) no-repeat;
+float:left;display:block}
 #user{float:right}
 #user a{color:#005C9C}
 #nav{height:24px;font-weight:bold;color:#FFF;margin:2px 0 12px;background:#FF6D06}
