--- a/templates/frontsite/index.html
+++ b/templates/frontsite/index.html
@@ -67,7 +67,7 @@
 	   })
 	</script>
 
-<div class="col fr">
+<div class="col fl">
         <h2>
             <span class="c_tl">&nbsp;</span>
             <span class="fl">###</span>
